<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Target Diet</string>
    <string name="quick_add">Quick Add</string>
    <string name="breakfast">Breakfast</string>
    <string name="brunch">Brunch</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="supper">Supper</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="quick_usage_description">Some %1$s</string>
    <string name="list_empty_foods_usage">Nothing to show yet. Try adding some values.</string>
    <string name="delete_food_usage_msg">Delete %1$s from %2$s?</string>
    <string name="forecast_straight_to_goal_description">Straight to goal!!</string>
    <string name="out_of_goal_with_enough_reserves">Out of goal using my reserves!</string>
    <string name="forecast_out_of_goal_but_can_return_description">Out of goal but I can return.</string>
    <string name="forecast_out_of_goal_description">Sorry, I\'m out of goal today…</string>
    <string name="no_show_two_digits_number">NN</string>
    <string name="no_show_small_year">2007</string>
    <string name="no_show_month">Sep</string>
    <string name="no_show_week_day_short">Mon</string>
    <string name="no_show_card_title">SOME TITLE</string>
    <string name="my_units_left">MY %1$s LEFT</string>
    <string name="my_units_at_end_of_day">FORECAST MY %1$s AT END OF DAY</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="exercise">Exercise</string>
    <string name="my_goals">MY GOALS</string>
    <string name="no_show_done_and_goal">NN/NN</string>
    <string name="liquid">Liquids</string>
    <string name="oil">Oils</string>
    <string name="supplement">Supplements</string>
    <string name="my_meals">MY MEALS</string>
    <string name="no_show_ideal_values">Ideal N.NN units from hh:mm to hh:mm</string>
    <string name="notes">NOTES</string>
    <string name="note_empty">You have no note for current date</string>
    <string name="january_short">Jan</string>
    <string name="february_short">Feb</string>
    <string name="march_short">Mar</string>
    <string name="april_short">Apr</string>
    <string name="may_short">May</string>
    <string name="june_short">Jun</string>
    <string name="july_short">Jul</string>
    <string name="august_short">Aug</string>
    <string name="september_short">Sep</string>
    <string name="october_short">Oct</string>
    <string name="november_short">Nov</string>
    <string name="december_short">Dec</string>
    <string name="decimal_point">.</string>
    <string name="no_show_time_mask">hh:MM</string>
    <string name="no_show_date_mask">dd/MM/yyyy</string>
    <string name="settings">Settings</string>
    <string name="units_actual_value">%1$.1f %2$s</string>
    <string name="exercise_goal">Exercise goal</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday_short">Sun</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="choose_exercise_goal">Choose exercise goal for weekday</string>
    <string name="choose_liquid_goal">Choose liquid goal for weekday</string>
    <string name="choose_oil_goal">Choose oil goal for weekday</string>
    <string name="choose_supplement_goal">Choose supplement for weekday</string>
    <plurals name="times_actual_value">
        <item quantity="one">%d time</item>
        <item quantity="other">%d times</item>
    </plurals>
    <string name="liquid_goal">Liquid Goal</string>
    <string name="oil_goal">Oil goal</string>
    <string name="supplement_goal">Supplement goal</string>
    <string name="my_plan">MY PLAN</string>
    <string name="daily_allowance">Daily allowance</string>
    <string name="weekly_allowance">Weekly allowance</string>
    <string name="no_show_exercise_use_mode">Exercise use mode description</string>
    <string name="exercise_use_mode">Exercise use mode</string>
    <string name="exercise_use_order">Exercise use order</string>
    <string name="no_show_exercise_use_order">Exercise use order description</string>
    <string name="exercise_use_mode_dont_use">Don\'t use</string>
    <string name="exercise_use_mode_use_dont_accumulate">Use but don\'t accumulate</string>
    <string name="exercise_use_mode_use_and_accumulate">Use and accumulate</string>
    <string name="exercise_use_order_use_exercises_first">Use exercises first</string>
    <string name="exercise_use_order_use_weekly_allowance_first">Use weekly allowance first</string>
    <string name="tracking_weekday">Tracking weekday</string>
    <string name="no_show_tracking_weekday">A tracking weekday</string>
    <string name="to">TO</string>
    <string name="from">FROM</string>
    <string name="ideal_meal_value">IDEAL MEAL VALUE</string>
    <string name="my_meals_ideal_values">MY MEALS IDEAL VALUES</string>
    <string name="choose_breakfast_ideal_values">Choose breakfast ideal values for weekday</string>
    <string name="breakfast_ideal_values">Breakfast ideal values</string>
    <string name="meal_ideal_actual_values">Ideal %1$.1f %2$s, from %3$s to %4$s</string>
    <string name="choose_brunch_ideal_values">Choose brunch ideal values for weekday</string>
    <string name="choose_lunch_ideal_values">Choose lunch ideal values for weekday</string>
    <string name="choose_snack_ideal_values">Choose snack ideal values for weekday</string>
    <string name="choose_dinner_ideal_values">Choose dinner ideal values for weekday</string>
    <string name="choose_supper_ideal_values">Choose supper ideal values for weekday</string>
    <string name="brunch_ideal_values">Brunch ideal values</string>
    <string name="lunch_ideal_values">Lunch ideal values</string>
    <string name="snack_ideal_values">Snack ideal values</string>
    <string name="dinner_ideal_values">Dinner ideal values</string>
    <string name="supper_ideal_values">Supper ideal values</string>
    <string name="meal_info">MEAL INFORMATION</string>
    <string name="usage_list">FOOD LIST</string>
    <string name="no_show_some_food">Food description line 1…\nFood description line 2…\nFood description line 3…</string>
    <string name="no_show_two_digits_with_decimal_number">NN.N</string>
    <string name="no_show_done_and_goal_with_decimal">NN.N/NN.N</string>
    <string name="note">note</string>
    <string name="weight_duplicated_message">You have already registered a weight with same date and time</string>
    <string name="weight">Weight</string>
    <string name="weight_list">WEIGHT LIST</string>
    <string name="no_show_two_digits_with_two_decimal_number">NN.NN</string>
    <string name="add">ADD</string>
    <string name="delete_weight_msg">Delete weight %1$.2f measured on %2$s - %3$s?</string>
    <string name="list_empty_weights">Nothing to show yet. Try adding some weights.</string>
    <string name="no_show_weight_notes">Weight notes line 1.\nWeight notes line 2.\nWeight notes line 3.</string>
    <string name="no_show_today">TODAY</string>
    <string name="note_add">ADD</string>
    <string name="note_edit">EDIT</string>
    <string name="today">TODAY</string>
    <string name="not_today">NOT today</string>
    <string name="no_show_line_1">Line 1</string>
    <string name="no_show_line_2">Line 2</string>
    <string name="balance_title">BALANCE</string>
    <string name="plus_signal">+</string>
    <string name="forecast">Forecast</string>
    <string name="balance">Balance (from %1$s)</string>
    <string name="no_show_forecast_description">Some interesting description here!</string>
    <string name="edit">edit</string>
    <string name="edit_ideal_values">Edit ideal values</string>
    <string name="calendar">calendar</string>
    <string name="no_show_goal_type">[Goal Type]</string>
    <string name="to_do">To do</string>
    <string name="total_planned">Total planned</string>
    <string name="planned">Planned</string>
    <string name="left">Left</string>
    <string name="on_going">ON GOING</string>
    <string name="no_show_preferred_meal">[Meal name] +NN</string>
    <string name="default_tracking_unit_name_zero">units</string>
    <string name="default_tracking_unit_name_one">unit</string>
    <string name="default_tracking_unit_name_many">units</string>
    <string name="tracking_unit_name">Tracking unit name</string>
    <string name="no_show_marshaled_tracking_unit_name">zero units; one unit; many units</string>
    <string name="marshaled_tracking_unit_name">zero %1$s; one %2$s; many %3$s</string>
    <string name="unmarshaled_tracking_unit_name">%1$s; %2$s; %3$s</string>
    <string name="tracking_unit_name_edit_error">You must set 3 strings enclosed by \';\' like in \'units; unit; units\'</string>
    <string name="no_show_quick_usage_header">Some [meal]</string>
    <string name="no_show_quick_usage_detail">+NN.N</string>
    <string name="no_show_quick_usage_footer">Do it now!</string>
    <string name="quick_usage_value">+%1$s</string>
    <string name="quick_usage_do_it_now">Do it now!</string>
    <string name="quick_usage_not_current_date">Not current date</string>
    <string name="backup_list">BACKUP LIST</string>
    <string name="no_show_backup_file_name">ETD_YYYYmmDDhhMMss.backup</string>
    <string name="no_show_backup_folder_name">root/SDCARD/EasyTargetDiet/backup/</string>
    <string name="restore_backup_msg">This operation will replace your current database with %1$s. Restore it?</string>
    <string name="backup">Backup</string>
    <string name="list_empty_backups">Nothing to show yet. Try adding some backups.</string>
    <string name="backup_result_msg_io_exception">We could NOT make a backup. An file error occurred (IO_EXCEPTION).</string>
    <string name="backup_result_msg_security_exception">We could NOT make a backup. An file security error occurred (SECURITY_EXCEPTION).</string>
    <string name="backup_result_msg_sd_card_unavailable">We could NOT make a backup. An error with the sd card occurred (SD_CARD_UNAVAILABLE).</string>
    <string name="backup_result_msg_success">Backup successful.</string>
    <string name="restore_result_msg_io_exception">We could NOT restore. An file error occurred (IO_EXCEPTION).</string>
    <string name="restore_result_msg_security_exception">We could NOT restore. An file security error occurred (SECURITY_EXCEPTION).</string>
    <string name="restore_result_msg_sd_card_unavailable">We could NOT restore. An error with the sd card occurred (SD_CARD_UNAVAILABLE).</string>
    <string name="restore_result_msg_invalid_candidate">We could NOT restore. The restore file is invalid (INVALID_CANDIDATE_FILE).</string>
    <string name="restore_result_msg_success">Restore successful.</string>
    <string name="restore">Restore</string>
    <string name="no_show_backup_last_modified">DD/mm/YYYY HH:MM:ss</string>
    <string name="delete_backup_file_msg">Delete backup file %1$s?</string>

</resources>
