<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_view_padding">

    <TextView
        android:id="@+id/lblWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/default_view_padding"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_show_two_digits_with_two_decimal_number" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/lblWeight"
        android:text="@string/no_show_date_mask"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/lblTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/lblWeight"
        android:layout_below="@id/lblDate"
        android:text="@string/no_show_time_mask"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/lblNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/lblWeight"
        android:layout_below="@id/lblTime"
        android:text="@string/no_show_weight_notes"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>