<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Card"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background">

    <TextView
        style="@style/CardFont.Header"
        android:id="@+id/lblNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes" />

    <View
        style="@style/HeaderDivider" />

    <TextView
        style="@style/CardFont"
        android:id="@+id/txtNotes"
        android:paddingTop="@dimen/padding_after_header_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_empty" />

    <Button
        style="@style/CardButton"
        android:id="@+id/btnEditNotes"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:text="@string/note_add" />

</LinearLayout>